# btop-rs

./: Cargo.toml  README.md
src/: main.rs
src/plugins/: example.rs
src/system/: cpu.rs  disk.rs  memory.rs  network.rs
src/ui/: layout.rs  mod.rs
src/ui/widgets/: cpu_graph.rs  mem_graph.rs  mod.rs
