[package]
name = "btop-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# rendering the ui
ratatui = "0.29.0"

# getting system information
sysinfo = "0.32.1"

# config stuff for the app
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

# async runtime
tokio = { version = "1.41.1", features = ["full"] }

# logs
log = "0.4.22"
env_logger = "0.11.5"

# extra stuff
platforms = "3.5.0"
crossterm = "0.28.1"
